# The_2nd_AI_Workshop_Hackathon

./: .env.example  .gitignore  README.md  The_2nd_AI_Workshop_Hackathon_Prompts_Eunchong_Kang.docx  The_2nd_AI_Workshop_Hackathon_Slides_Eunchong_Kang.pptx  analysis_report.ipynb  drug_brands.csv  pyproject.toml  setup_R.R  step0_process_data.R  step1_run_ebgm.R  step1_run_sensitivity.R  step2_classify_pts.py  step3_compare_to_label.py  step4_score_pts.py
data/raw/: README.md
utils/: __init__.py  config.py  drugs.py  embed.py  llm.py  openfda.py  taxonomy.py
